--- a/signup.html
+++ b/signup.html
@@ -13,138 +13,167 @@
   <header class="signup-header">
     <div class="signup-header__inner">
       <a class="logo" href="/">
-        <img src="assets/luce-logo.svg" alt="LUCE" onerror="this.style.display='none'" />
+        <img src="assets/luce_logo_main.png" alt="LUCE" />
         <span class="logo__text">LUCE LOOKBOOK</span>
       </a>
-      <a class="btn ghost" href="index.html">돌아가기</a>
+      <div class="header-actions">
+        <nav class="lang-switcher" aria-label="언어 선택">
+          <button data-lang="ko" class="active">한글</button>
+          <span>/</span>
+          <button data-lang="en">ENG</button>
+          <span>/</span>
+          <button data-lang="zh">中文</button>
+        </nav>
+        <a class="btn ghost" href="index.html" data-i18n-key="signup_back_home">메인으로</a>
+      </div>
     </div>
   </header>
 
   <main class="signup-main">
     <section class="signup-card" aria-labelledby="signup-title">
       <header class="signup-card__header">
-        <p class="tag">SIGN UP</p>
-        <h1 id="signup-title">회원 유형을 선택하고 정보를 입력하세요</h1>
-        <p class="signup-card__subtitle">Supabase 인증을 통해 안전하게 가입하고, 프로필 정보를 저장합니다.</p>
+        <p class="tag" data-i18n-key="signup_tag">SIGN UP</p>
+        <h1 id="signup-title" data-i18n-key="signup_title">회원 유형을 선택하고 정보를 입력하세요</h1>
+        <p class="signup-card__subtitle" data-i18n-key="signup_subtitle">Supabase 인증을 통해 안전하게 가입하고, 프로필 정보를 저장합니다.</p>
       </header>
 
       <div class="signup-steps" role="tablist" aria-label="회원가입 단계">
-        <button type="button" class="signup-step is-active" id="step-1-tab" data-step="1" aria-selected="true" aria-controls="step-panel-1">1. 회원 유형 선택</button>
-        <button type="button" class="signup-step" id="step-2-tab" data-step="2" aria-selected="false" aria-controls="step-panel-2" disabled>2. 정보 입력</button>
-        <button type="button" class="signup-step" id="step-3-tab" data-step="3" aria-selected="false" aria-controls="step-panel-3" disabled>3. 완료</button>
+        <button type="button" class="signup-step is-active" id="step-1-tab" data-step="1" aria-selected="true" aria-controls="step-panel-1" data-i18n-key="signup_step_select">1. 회원 유형 선택</button>
+        <button type="button" class="signup-step" id="step-2-tab" data-step="2" aria-selected="false" aria-controls="step-panel-2" disabled data-i18n-key="signup_step_form">2. 정보 입력</button>
+        <button type="button" class="signup-step" id="step-3-tab" data-step="3" aria-selected="false" disabled data-i18n-key="signup_step_complete">3. 완료</button>
       </div>
 
       <form id="signup-form" novalidate>
         <section class="signup-panel" id="step-panel-1" data-step-panel="1" role="tabpanel" aria-labelledby="step-1-tab" aria-hidden="false">
-          <h2 class="signup-panel__title">어떤 유형으로 가입하시나요?</h2>
-          <p class="signup-panel__description">가입 후에도 프로필에서 회원 유형을 변경할 수 있습니다.</p>
+          <h2 class="signup-panel__title" data-i18n-key="signup_type_title">어떤 유형으로 가입하시나요?</h2>
+          <p class="signup-panel__description" data-i18n-key="signup_type_description">가입 후에도 프로필에서 회원 유형을 변경할 수 있습니다.</p>
 
           <div class="member-type-grid" role="radiogroup" aria-label="회원 유형">
             <label class="member-type-card">
               <input type="radio" name="user_type" value="supplier" required>
-              <span class="member-type-card__badge">공급업체</span>
-              <span class="member-type-card__title">상품을 공급하고 싶은 파트너</span>
-              <span class="member-type-card__description">사업자등록증과 주요 판매 채널 정보를 등록해 주세요.</span>
+              <span class="member-type-card__badge" data-i18n-key="signup_type_supplier_badge">공급업체</span>
+              <span class="member-type-card__title" data-i18n-key="signup_type_supplier_title">상품을 공급하고 싶은 파트너</span>
+              <span class="member-type-card__description" data-i18n-key="signup_type_supplier_desc">사업자등록증과 주요 판매 채널 정보를 등록해 주세요.</span>
             </label>
             <label class="member-type-card">
               <input type="radio" name="user_type" value="seller" required>
-              <span class="member-type-card__badge">셀러</span>
-              <span class="member-type-card__title">라이브 커머스를 진행하는 셀러</span>
-              <span class="member-type-card__description">연락 가능한 정보를 입력하고, 운영 중인 채널을 알려주세요.</span>
+              <span class="member-type-card__badge" data-i18n-key="signup_type_seller_badge">셀러</span>
+              <span class="member-type-card__title" data-i18n-key="signup_type_seller_title">라이브 커머스를 진행하는 셀러</span>
+              <span class="member-type-card__description" data-i18n-key="signup_type_seller_desc">연락 가능한 정보를 입력하고, 운영 중인 채널을 알려주세요.</span>
             </label>
             <label class="member-type-card">
               <input type="radio" name="user_type" value="member" required>
-              <span class="member-type-card__badge">일반회원</span>
-              <span class="member-type-card__title">룩북 소식을 받아보고 싶은 회원</span>
-              <span class="member-type-card__description">기본 연락처만 입력하면 가입할 수 있습니다.</span>
+              <span class="member-type-card__badge" data-i18n-key="signup_type_member_badge">일반회원</span>
+              <span class="member-type-card__title" data-i18n-key="signup_type_member_title">룩북 소식을 받아보고 싶은 회원</span>
+              <span class="member-type-card__description" data-i18n-key="signup_type_member_desc">기본 연락처만 입력하면 가입할 수 있습니다.</span>
             </label>
           </div>
 
           <div class="signup-actions">
-            <button type="button" class="btn primary" id="to-step-2" disabled>다음 단계</button>
+            <button type="button" class="btn primary" id="to-step-2" disabled data-i18n-key="signup_next">다음 단계</button>
           </div>
         </section>
 
         <section class="signup-panel" id="step-panel-2" data-step-panel="2" role="tabpanel" aria-labelledby="step-2-tab" aria-hidden="true" hidden>
-          <h2 class="signup-panel__title">기본 정보를 입력해주세요</h2>
-          <p class="signup-panel__description" id="selected-type-help">선택한 회원 유형에 맞춰 필수 항목이 달라집니다.</p>
+          <h2 class="signup-panel__title" data-i18n-key="signup_form_title">기본 정보를 입력해주세요</h2>
+          <p class="signup-panel__description" id="selected-type-help" data-i18n-key="signup_form_description">선택한 회원 유형에 맞춰 필수 항목이 달라집니다.</p>
 
           <div class="form-grid">
             <div class="form-group">
-              <label for="full_name">이름<span aria-hidden="true" class="required">*</span></label>
+              <label for="full_name"><span data-i18n-key="signup_full_name_label">이름</span><span aria-hidden="true" class="required">*</span></label>
               <input type="text" id="full_name" name="full_name" autocomplete="name" required>
-              <p class="form-hint">실명을 입력해주세요.</p>
+              <p class="form-hint" data-i18n-key="signup_full_name_hint">실명을 입력해주세요.</p>
             </div>
             <div class="form-group">
-              <label for="email">이메일<span aria-hidden="true" class="required">*</span></label>
+              <label for="email"><span data-i18n-key="signup_email_label">이메일</span><span aria-hidden="true" class="required">*</span></label>
               <input type="email" id="email" name="email" autocomplete="email" required>
-              <p class="form-hint">로그인 아이디로 사용됩니다.</p>
+              <p class="form-hint" data-i18n-key="signup_email_hint">로그인 아이디로 사용됩니다.</p>
             </div>
             <div class="form-group">
-              <label for="password">비밀번호<span aria-hidden="true" class="required">*</span></label>
+              <label for="password"><span data-i18n-key="signup_password_label">비밀번호</span><span aria-hidden="true" class="required">*</span></label>
               <input type="password" id="password" name="password" minlength="8" required>
-              <p class="form-hint">8자 이상, 영문/숫자 조합을 권장합니다.</p>
+              <p class="form-hint" data-i18n-key="signup_password_hint">8자 이상, 영문/숫자 조합을 권장합니다.</p>
             </div>
             <div class="form-group">
-              <label for="phone_number">연락처<span aria-hidden="true" class="required">*</span></label>
+              <label for="phone_number"><span data-i18n-key="signup_phone_label">연락처</span><span aria-hidden="true" class="required">*</span></label>
               <input type="tel" id="phone_number" name="phone_number" autocomplete="tel" placeholder="010-1234-5678" required>
             </div>
           </div>
 
           <div class="form-grid">
             <div class="form-group" data-extra="business">
-              <label for="company_name">회사/브랜드명<span aria-hidden="true" class="required">*</span></label>
+              <label for="company_name"><span data-i18n-key="signup_company_label">회사/브랜드명</span><span aria-hidden="true" class="required">*</span></label>
               <input type="text" id="company_name" name="company_name">
             </div>
             <div class="form-group" data-extra="business">
-              <label for="business_registration_number">사업자등록번호<span aria-hidden="true" class="required">*</span></label>
+              <label for="business_registration_number"><span data-i18n-key="signup_business_label">사업자등록번호</span><span aria-hidden="true" class="required">*</span></label>
               <input type="text" id="business_registration_number" name="business_registration_number" placeholder="000-00-00000" inputmode="numeric">
             </div>
-            <div class="form-group" data-extra="channels">
-              <label for="main_platforms">주요 판매 플랫폼</label>
-              <input type="text" id="main_platforms" name="main_platforms" placeholder="예: 네이버쇼핑, 스마트스토어">
+            <div class="form-group" data-extra="platforms">
+              <span class="form-group__label" data-i18n-key="signup_platforms_label">주요 판매 플랫폼</span>
+              <div class="checkbox-grid" id="main_platforms">
+                <label class="checkbox">
+                  <input type="checkbox" name="main_platforms" value="YouTube">
+                  <span data-i18n-key="signup_platform_youtube">유튜브</span>
+                </label>
+                <label class="checkbox">
+                  <input type="checkbox" name="main_platforms" value="TikTok">
+                  <span data-i18n-key="signup_platform_tiktok">틱톡</span>
+                </label>
+                <label class="checkbox">
+                  <input type="checkbox" name="main_platforms" value="Instagram">
+                  <span data-i18n-key="signup_platform_instagram">인스타그램</span>
+                </label>
+                <label class="checkbox">
+                  <input type="checkbox" name="main_platforms" value="Grab">
+                  <span data-i18n-key="signup_platform_grab">그랩</span>
+                </label>
+                <label class="checkbox">
+                  <input type="checkbox" name="main_platforms" value="Clickmate">
+                  <span data-i18n-key="signup_platform_clickmate">클릭메이트</span>
+                </label>
+                <label class="checkbox">
+                  <input type="checkbox" name="main_platforms" value="Other">
+                  <span data-i18n-key="signup_platform_other">기타</span>
+                </label>
+              </div>
+              <p class="form-hint" data-i18n-key="signup_platforms_hint">복수 선택이 가능합니다.</p>
             </div>
             <div class="form-group" data-extra="channels">
-              <label for="channel_url">라이브 채널 URL</label>
+              <label for="channel_url"><span data-i18n-key="signup_channel_label">라이브 채널 URL</span></label>
               <input type="url" id="channel_url" name="channel_url" placeholder="https://">
+              <p class="form-hint" data-i18n-key="signup_channel_hint">중복 등록된 URL은 사용할 수 없습니다.</p>
             </div>
           </div>
 
           <fieldset class="consent-fieldset">
-            <legend>약관 동의</legend>
+            <legend data-i18n-key="signup_terms_title">약관 동의</legend>
             <div class="policy-box" role="region" aria-label="개인정보 처리방침">
-              <h3>개인정보 수집 및 이용 동의 (필수)</h3>
-              <p>㈜루체는 회원 가입을 위해 아래의 개인정보를 수집·이용합니다.</p>
+              <h3 data-i18n-key="signup_terms_required_title">개인정보 수집 및 이용 동의 (필수)</h3>
+              <p data-i18n-key="signup_terms_intro">㈜루체는 회원 가입을 위해 아래의 개인정보를 수집·이용합니다.</p>
               <ul>
-                <li>수집 항목: 이름, 이메일, 비밀번호, 연락처, 선택적으로 회사명 및 채널 정보</li>
-                <li>이용 목적: 서비스 제공, 회원 식별, 고객 상담, 파트너 매칭</li>
-                <li>보유 기간: 회원 탈퇴 후 최대 3년 보관 후 즉시 파기</li>
+                <li data-i18n-key="signup_terms_item1">수집 항목: 이름, 이메일, 비밀번호, 연락처, 선택적으로 회사명 및 채널 정보</li>
+                <li data-i18n-key="signup_terms_item2">이용 목적: 서비스 제공, 회원 식별, 고객 상담, 파트너 매칭</li>
+                <li data-i18n-key="signup_terms_item3">보유 기간: 회원 탈퇴 후 최대 3년 보관 후 즉시 파기</li>
               </ul>
-              <p>위 내용을 확인하였으며 동의합니다.</p>
+              <p data-i18n-key="signup_terms_confirm">위 내용을 확인하였으며 동의합니다.</p>
             </div>
             <label class="checkbox">
               <input type="checkbox" id="terms_consent" name="terms_consent" required>
-              <span>개인정보 수집 및 이용에 동의합니다. (필수)</span>
+              <span data-i18n-key="signup_terms_required">개인정보 수집 및 이용에 동의합니다. (필수)</span>
             </label>
             <label class="checkbox">
               <input type="checkbox" id="marketing_consent" name="marketing_consent">
-              <span>이벤트 및 마케팅 정보 수신에 동의합니다. (선택)</span>
+              <span data-i18n-key="signup_terms_marketing">이벤트 및 마케팅 정보 수신에 동의합니다. (선택)</span>
             </label>
           </fieldset>
 
           <div class="signup-actions">
-            <button type="button" class="btn ghost" id="back-to-step-1">이전</button>
-            <button type="submit" class="btn primary">회원가입 완료</button>
+            <button type="button" class="btn ghost" id="back-to-step-1" data-i18n-key="signup_prev">이전 단계</button>
+            <button type="submit" class="btn primary" data-i18n-key="signup_submit">회원가입 완료</button>
           </div>
         </section>
 
-        <section class="signup-panel" id="step-panel-3" data-step-panel="3" role="tabpanel" aria-labelledby="step-3-tab" aria-hidden="true" hidden>
-          <div class="signup-complete">
-            <h2>가입 신청이 완료되었습니다.</h2>
-            <p>입력하신 이메일 주소로 인증 메일을 전송했습니다. 메일 확인 후 로그인해주세요.</p>
-            <a class="btn primary" href="index.html">메인으로 돌아가기</a>
-          </div>
-        </section>
       </form>
 
       <p class="signup-feedback" id="signup-feedback" role="status" aria-live="polite"></p>
@@ -152,6 +181,9 @@
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="scripts/supabaseClient.js" defer></script>
+  <script src="scripts/signupCopy.js" defer></script>
+  <script src="scripts/i18n.js" defer></script>
   <script src="scripts/signup.js" defer></script>
 </body>
 </html>
